package bt_java.baitap_ca4;

public interface TopicListener {
    void insertListener(News n);
    void updateListener(News n);
}
